# ya2dlna_streaming

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
src/api/: main.py
src/api/endpoints/: api_service.py
src/core/authorization/: exceptions.py  yandex_tokens.py
src/core/config/: settings.py
src/core/dependencies/: di_modules.py  main_di_container.py
src/core/logging/: __init__.py  setup.py
src/dlna_stream_server/: main.py
src/dlna_stream_server/endpoints/: stream.py
src/dlna_stream_server/handlers/: constants.py  ffmpeg_supervisor.py  stream_handler.py  utils.py
src/main_stream_service/: main_stream_manager.py  yandex_music_api.py
src/ruark_audio_system/: constants.py  exceptions.py  fsapi_client.py  location_store.py  ruark_r5_controller.py  ssdp.py  volume_store.py
src/yandex_station/: constants.py  exceptions.py  mdns_device_finder.py  models.py  protobuf_parser.py  radio_stations.py  station_controls.py  station_store.py  station_ws_control.py
tests/: conftest.py  test_client.py  test_device_init.py  test_protobuf_parser.py  test_ruark_fsapi.py  test_ruark_metadata.py  test_station_controls.py  test_stream_handler.py  test_stream_utils.py  test_streaming_loop.py  test_volume_memory.py  test_yandex_music_api.py
