[project]
name = "ya2dlna-streaming"
version = "1.0.0"
description = "Стриминг музыки с Яндекс Станции на DLNA-устройства (Ruark R5)"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.11.18",
    "fastapi==0.115.11",
    "injector==0.22.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "upnpclient==1.0.3",
    "uvicorn==0.34.0",
    "yandex-music==3.0.0",
    "zeroconf==0.146.1",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-docstrings",
    "flake8-isort",
    "isort",
    "mypy",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
]

[tool.uv]
# Проект не собирается как пакет: uv управляет только зависимостями
package = false

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | cache
)/
'''

[tool.isort]
profile = "black"
line_length = 79
known_first_party = [
    "api",
    "core",
    "dlna_stream_server",
    "main_stream_service",
    "ruark_audio_system",
    "yandex_station",
]
src_paths = ["src", "tests"]
skip = [".venv", "venv", "build", "dist", "cache"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src"]
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
pretty = true

exclude = '(^|/)(tmp_.*|temp.*)\.py$'

no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

plugins = ["pydantic.mypy"]

check_untyped_defs = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["upnpclient", "upnpclient.*", "yandex_music", "yandex_music.*"]
ignore_missing_imports = true